crates/normalize-surface-syntax/tests/snapshots/snapshots__typescript_reader__try_catch_finally.snap
---
source: crates/normalize-surface-syntax/tests/snapshots.rs
expression: "parse(\"try { doSomething(); } catch (e) { console.log(e); } finally { cleanup(); }\")"
---
{
  "body": [
    {
      "TryCatch": {
        "body": {
          "Block": [
            {
              "Expr": {
                "Call": {
                  "callee": {
                    "Ident": "doSomething"
                  },
                  "args": []
                }
              }
            }
          ]
        },
        "catch_param": "e",
        "catch_body": {
          "Block": [
            {
              "Expr": {
                "Call": {
                  "callee": {
                    "Member": {
                      "object": {
                        "Ident": "console"
                      },
                      "property": {
                        "Literal": {
                          "String": "log"
                        }
                      },
                      "computed": false
                    }
                  },
                  "args": [
                    {
                      "Ident": "e"
                    }
                  ]
                }
              }
            }
          ]
        },
        "finally_body": {
          "Block": [
            {
              "Expr": {
                "Call": {
                  "callee": {
                    "Ident": "cleanup"
                  },
                  "args": []
                }
              }
            }
          ]
        }
      }
    }
  ]
}
