crates/normalize-surface-syntax/tests/snapshots/snapshots__typescript_reader__while_loop.snap
---
source: crates/normalize-surface-syntax/tests/snapshots.rs
assertion_line: 64
expression: "parse(\"while (i < 10) { i = i + 1; }\")"
---
{
  "body": [
    {
      "While": {
        "test": {
          "Binary": {
            "left": {
              "Ident": "i"
            },
            "op": "Lt",
            "right": {
              "Literal": {
                "Number": 10.0
              }
            }
          }
        },
        "body": {
          "Block": [
            {
              "Expr": {
                "Assign": {
                  "target": {
                    "Ident": "i"
                  },
                  "value": {
                    "Binary": {
                      "left": {
                        "Ident": "i"
                      },
                      "op": "Add",
                      "right": {
                        "Literal": {
                          "Number": 1.0
                        }
                      }
                    }
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
